--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ cmake-build-debug/homework2_3.cbp
 cmake-build-debug/Makefile
 cmake-build-debug/Testing/Temporary/LastTest.log
 CMakeLists.txt
+trstrt/Презентация Microsoft PowerPoint.pptx
