--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ cmake-build-debug/Makefile
 cmake-build-debug/Testing/Temporary/LastTest.log
 CMakeLists.txt
 trstrt/Презентация Microsoft PowerPoint.pptx
+cmake-build-debug/CMakeFiles/homework2_3.dir/C.includecache
+cmake-build-debug/CMakeFiles/homework2_3.dir/depend.internal
+cmake-build-debug/CMakeFiles/homework2_3.dir/main.c.obj
+cmake-build-debug/CMakeFiles/homework2_3.dir/objects.a
+cmake-build-debug/homework2_3.exe
